@@ -13,40 +13,7 @@ namespace irr
 {
 namespace gui
 {
-	//! A tab-page, onto which other gui elements could be added.
-	/** IGUITab refers mostly to the page itself, but also carries some data about the tab in the tabbar of an IGUITabControl. */
-	class IGUITab : public IGUIElement
-	{
-	public:
-
-		//! constructor
-		IGUITab(IGUIEnvironment* environment, IGUIElement* parent, s32 id, core::rect<s32> rectangle)
-			: IGUIElement(EGUIET_TAB, environment, parent, id, rectangle) {}
-
-		//! Returns zero based index of tab if in tabcontrol.
-		/** Can be accessed later IGUITabControl::getTab() by this number.
-			Note that this number can change when other tabs are inserted or removed .
-		*/
-		virtual s32 getNumber() const = 0;
-
-		//! sets if the tab should draw its background
-		virtual void setDrawBackground(bool draw=true) = 0;
-
-		//! sets the color of the background, if it should be drawn.
-		virtual void setBackgroundColor(video::SColor c) = 0;
-
-		//! returns true if the tab is drawing its background, false if not
-		virtual bool isDrawingBackground() const = 0;
-
-		//! returns the color of the background
-		virtual video::SColor getBackgroundColor() const = 0;
-
-		//! sets the color of it's text in  the tab-bar
-		virtual void setTextColor(video::SColor c) = 0;
-
-		//! gets the color of the text
-		virtual video::SColor getTextColor() const = 0;
-	};
+	class IGUITab;
 
 	//! A standard tab control
 	/** \par This element can create the following events of type EGUI_EVENT_TYPE:
@@ -63,9 +30,26 @@ namespace gui
 		//! Adds a tab
 		virtual IGUITab* addTab(const wchar_t* caption, s32 id=-1) = 0;
 
+		//! Adds an existing tab
+		/** Note that it will also add the tab as a child of this TabControl.
+		\return Index of added tab or -1 for failure*/
+		virtual s32 addTab(IGUITab* tab) = 0;
+
 		//! Insert the tab at the given index
 		/** \return The tab on success or NULL on failure. */
 		virtual IGUITab* insertTab(s32 idx, const wchar_t* caption, s32 id=-1) = 0;
+
+		//! Insert an existing tab
+		/** Note that it will also add the tab as a child of this TabControl.
+		\param idx Index at which tab will be inserted. Later tabs will be moved. 
+		           Previous active tab will stay active unless this is the first 
+				   element to be inserted in which case it becomes active.
+		\param tab New tab to insert.
+		\param serializationMode Internally used for serialization. You should not need this.
+		       When true it reserves space for the index, doesn't move but replaces tabs 
+			   and it doesn't change the active tab.
+		\return Index of added tab (should be same as the one passed) or -1 for failure*/
+		virtual s32 insertTab(s32 idx, IGUITab* tab, bool serializationMode=false) = 0;
 
 		//! Removes a tab from the tabcontrol
 		virtual void removeTab(s32 idx) = 0;
@@ -81,6 +65,13 @@ namespace gui
 		\return Returns pointer to the Tab. Returns 0 if no tab
 		is corresponding to this tab. */
 		virtual IGUITab* getTab(s32 idx) const = 0;
+
+		//! For given element find if it's a tab and return it's zero-based index (or -1 for not found)
+		/** \param tab Tab for which we are looking (usually you will look for an IGUITab* type as only  
+		              those can be tabs, but we allow looking for any kind of IGUIElement* as there are some 
+					  use-cases for that even if it just returns 0. For example this way you can check for
+					  all children of this gui-element if they are tabs or some non-tab children.*/
+		virtual s32 getTabIndex(const IGUIElement *tab) const = 0;
 
 		//! Brings a tab to front.
 		/** \param idx: number of the tab.
@@ -128,6 +119,43 @@ namespace gui
 		virtual s32 getTabExtraWidth() const = 0;
 	};
 
+	//! A tab-page, onto which other gui elements could be added.
+	/** IGUITab refers mostly to the page itself, but also carries some data about the tab in the tabbar of an IGUITabControl. */
+	class IGUITab : public IGUIElement
+	{
+	public:
+
+		//! constructor
+		IGUITab(IGUIEnvironment* environment, IGUIElement* parent, s32 id, core::rect<s32> rectangle)
+			: IGUIElement(EGUIET_TAB, environment, parent, id, rectangle) {}
+
+		//! Returns zero based index of tab if in tabcontrol.
+		/** \deprecated Deprecated in 1.9, use IGUITabControl::getTabIndex instead*/
+		_IRR_DEPRECATED_ virtual s32 getNumber() const
+		{
+			if (Parent && Parent->getType() == EGUIET_TAB_CONTROL)
+				return static_cast<IGUITabControl* const>(Parent)->getTabIndex(this);
+			return -1;
+		}
+
+		//! sets if the tab should draw its background
+		virtual void setDrawBackground(bool draw=true) = 0;
+
+		//! sets the color of the background, if it should be drawn.
+		virtual void setBackgroundColor(video::SColor c) = 0;
+
+		//! returns true if the tab is drawing its background, false if not
+		virtual bool isDrawingBackground() const = 0;
+
+		//! returns the color of the background
+		virtual video::SColor getBackgroundColor() const = 0;
+
+		//! sets the color of it's text in  the tab-bar
+		virtual void setTextColor(video::SColor c) = 0;
+
+		//! gets the color of the text
+		virtual video::SColor getTextColor() const = 0;
+	};
 
 } // end namespace gui
 } // end namespace irr
